{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 20,
  "lineage": "199ca125-d9a0-4005-2afa-d7858c530e2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance_hw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:740455785879:instance/i-03eb0e06f5aa79514",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "automation-profile",
            "id": "i-03eb0e06f5aa79514",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ECE592b",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e59e3ad13c786302",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "public_ip": "54.158.225.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-009ba3977dc354515",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c81f20f2ad083576",
            "tags": {
              "Name": "automation-vm"
            },
            "tags_all": {
              "Name": "automation-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01da0779d1c828572"
            ]
          },
          "dependencies": [
            "aws_vpc.mainn",
            "data.aws_ami.latest-amazon-ami",
            "aws_iam_instance_profile.automation-profile",
            "aws_iam_role.automation-role",
            "aws_security_group.week4",
            "aws_subnet.week_4_us_east_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:internet-gateway/igw-02d19ccfa6fcf9688",
            "id": "igw-02d19ccfa6fcf9688",
            "owner_id": "740455785879",
            "tags": {
              "Name": "automation-igw"
            },
            "tags_all": {
              "Name": "automation-igw"
            },
            "vpc_id": "vpc-0bf177327c7721068"
          },
          "dependencies": [
            "aws_vpc.mainn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:route-table/rtb-0f408443de1441b45",
            "id": "rtb-0f408443de1441b45",
            "owner_id": "740455785879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d19ccfa6fcf9688",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "automation-rt"
            },
            "tags_all": {
              "Name": "automation-rt"
            },
            "vpc_id": "vpc-0bf177327c7721068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainn",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:security-group/sg-01da0779d1c828572",
            "description": "AllowSSHinboundtraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01da0779d1c828572",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "automation-ssh-sg",
            "name_prefix": "",
            "owner_id": "740455785879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automation-ssh-sg"
            },
            "tags_all": {
              "Name": "automation-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf177327c7721068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week_4_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:subnet/subnet-0c81f20f2ad083576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c81f20f2ad083576",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740455785879",
            "tags": {
              "Name": "automation-sub-a"
            },
            "tags_all": {
              "Name": "automation-sub-a"
            },
            "vpc_id": "vpc-0bf177327c7721068"
          },
          "dependencies": [
            "aws_vpc.mainn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week_4_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:subnet/subnet-00230cb559338c86c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00230cb559338c86c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740455785879",
            "tags": {
              "Name": "automation-sub-b"
            },
            "tags_all": {
              "Name": "automation-sub-b"
            },
            "vpc_id": "vpc-0bf177327c7721068"
          },
          "dependencies": [
            "aws_vpc.mainn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740455785879:vpc/vpc-0bf177327c7721068",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0954a0f0ff7dad052",
            "default_route_table_id": "rtb-0649419c6003959eb",
            "default_security_group_id": "sg-059303c5702d57d2f",
            "dhcp_options_id": "dopt-a02b30da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bf177327c7721068",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0649419c6003959eb",
            "owner_id": "740455785879",
            "tags": {
              "Name": "automation-vpc"
            },
            "tags_all": {
              "Name": "automation-vpc"
            }
          }
        }
      ]
    }
  ]
}